# 5e

./: CMakeLists.txt  main.c
string/: CMakeLists.txt
string/string_/: CMakeLists.txt  string_.c  string_.h
string/string_/tasks/: deletePalindromWords.h  deleteWordsEqualLastWord.h  digitToStart.c  digitToStart.h  getCountPalindromeWords.h  getLastWordInFirstStringFromSecondString.h  getMergeString.h  getStringWithoutEqualLastWord.h  getStringWithoutLastWordAndEqualToNim.h  isLettersOfWordsInStringEqual.h  isStringHaveAllLetters.h  printWordBeforeFirstWordWithA.h  printWordsReverse.h  removeExtraSpaces.c  removeExtraSpaces.h  removeNonLetters.c  removeNonLetters.h  replace.h  sortedWord.h  spaceInsteadDigits.h  stringHaveEqualWords.h
